# FLASh_fork

./: .gitignore  README.md  bddc.py  bddc_convergence.py  cell_convergence.py  cluster_interpolator.py  deim_int.py  elasticity_example_1.py  elasticity_example_2.py  elasticity_example_3.py  gauss_lobatto.py  generate_coefficient_data_int.py  generate_data.py  generate_lagrange_cluster_rom.py  generate_lagrange_cluster_rom_2.py  geometry.py  global_dofs_manager.py  install.py  install.sh  install_all.py  install_all.sh  install_qugar_with_conda.sh  interpolator.py  interpolator_2.py  lagrange_cluster_rom.py  lagrange_cluster_rom_2.py  lagrange_rom.py  linear_pde.py  mapped_linear_pde.py  merge_files.py  plot_geometries.py  plotter.py  pyproject.toml  que.py  requirements.txt  scalability_convergence.py  scalability_convergence_2.py  scalability_convergence_3.py  scalability_convergence_4.py  spline_subdomain.py  (+5 more)
FLASh/: __init__.py
FLASh/mesh/: __init__.py  gauss_lobatto.py  geometry.py  global_dofs_manager.py  global_mesh.py  gyroid.py  legendre.py  splines.py  subdomain.py
FLASh/pde/: amg.py  (+6 more)
docs/: api.rst  api_mesh.rst  api_pde.rst  api_rom.rst  api_utils.rst  conf.py  examples.rst  index.rst  installation.rst  modules.rst
examples/: _paths.py  convergence.py  create_rom.py  example_1.ipynb  example_1.py  example_2.py  example_3.py  example_4.ipynb  example_4.py  example_5.py  example_5_utils.py  plot_results.py  rom_basis_test.py  single_cell_rom.py  test_1.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py  test_convergence.py  test_interpolation.py
(+17 files in other folders)
